--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^4.2.0",
+    "@aws-sdk/client-ses": "^3.229.0",
+    "@aws-sdk/credential-provider-node": "^3.229.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^5.0.5",
     "axios": "^1.2.1",
+    "nodemailer": "^6.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
