--- a/package.json
+++ b/package.json
@@ -1,52 +1,56 @@
 {
-  "name": "scical",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "dependencies": {
-    "@aws-amplify/ui-react": "^4.2.0",
-    "@aws-sdk/client-ses": "^3.229.0",
-    "@aws-sdk/credential-provider-node": "^3.229.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^5.0.5",
-    "axios": "^1.2.1",
-    "nodemailer": "^6.8.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.5",
-    "react-scripts": "5.0.1",
-    "slug": "^8.2.2",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
-  }
+    "name": "sciencecalendar",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "amplify-modelgen": "node amplify\\scripts\\amplify-modelgen.js",
+        "amplify-push": "node amplify\\scripts\\amplify-push.js"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "dependencies": {
+        "@aws-amplify/ui-react": "^4.2.0",
+        "@aws-sdk/client-ses": "^3.229.0",
+        "@aws-sdk/credential-provider-node": "^3.229.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "aws-amplify": "^5.0.5",
+        "axios": "^1.2.1",
+        "nodemailer": "^6.8.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.4.5",
+        "react-scripts": "5.0.1",
+        "slug": "^8.2.2",
+        "uuid": "^9.0.0",
+        "web-vitals": "^2.1.4"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.13",
+        "postcss": "^8.4.19",
+        "tailwindcss": "^3.2.4",
+        "ini": "^1.3.5",
+        "inquirer": "^6.5.1"
+    }
 }
