--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "add-to-calendar-button": "^1.18.8",
         "aws-amplify": "^5.0.5",
         "axios": "^1.2.1",
         "nodemailer": "^6.8.0",
@@ -48,9 +49,9 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
-        "postcss": "^8.4.19",
-        "tailwindcss": "^3.2.4",
         "ini": "^1.3.5",
-        "inquirer": "^6.5.1"
+        "inquirer": "^6.5.1",
+        "postcss": "^8.4.19",
+        "tailwindcss": "^3.2.4"
     }
 }
