--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
         "add-to-calendar-button": "^1.18.8",
         "aws-amplify": "^5.0.5",
         "axios": "^1.2.1",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.40",
         "nodemailer": "^6.8.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-moment": "^1.1.2",
         "react-router-dom": "^6.4.5",
         "react-scripts": "5.0.1",
         "slug": "^8.2.2",
